Fix site cloning point selection styling: * Fix background color * Change clone button text to be on one line * Align button to the end

--- a/client/my-sites/activity/activity-log-item/style.scss
+++ b/client/my-sites/activity/activity-log-item/style.scss
@@ -312,6 +312,7 @@
 
 .activity-log-item__action {
 	display: flex;
+	justify-content: flex-end;
 
 	@include breakpoint( '<480px' ) {
 		margin-top: 16px;
@@ -331,6 +332,10 @@
 			transform: translateY( -50% );
 		}
 	}
+}
+
+.activity-log-item__clone-action {
+	flex-shrink: 0;
 }
 
 .activity-log-item__help-action {
